test/good/dictionaries/dict11.px

d: {String:[Int]}
t = d["a"], d['b'], d["cd"], d['x']
print t, d.length
