test/bad/dictionaries/decl04.px

{Int:[String]} d
d' = {0: ['x']}
d = d'
